Applying Strict Mode + JSlint

--- a/.jshintrc
+++ b/.jshintrc
@@ -3,19 +3,22 @@
 	"unused" : true,
 	"strict" : true,
 	"globals" : {
-		"window" : true,
-		"console" : true,
-		"document" : true,
-		"app" : true,
-		"$" : true,
-		"_" : true,
-		"Backbone" : true,
-		"Mustache" : true,
-		"define" : true,
-		"ColorPicker" : true,
-		"html2canvas" : true,
-		"localStorage" : true,
-		"require" : true,
-		"impress" : true
+		"window" : false,
+		"console" : false,
+		"document" : false,
+		"app" : false,
+		"$" : false,
+		"_" : false,
+		"Backbone" : false,
+		"Mustache" : false,
+		"define" : false,
+		"ColorPicker" : false,
+		"html2canvas" : false,
+		"localStorage" : false,
+		"require" : false,
+		"impress" : false,
+		"setTimeout" : false,
+		"io" : false,
+		"FormData" : false
 	}
 }
