--- a/.jshintrc
+++ b/.jshintrc
@@ -1,11 +1,24 @@
 {
+	"bitwise" : true,
+	"curly" : true,
+	"eqeqeq" : true,
+	"es3" : true,
+	"forin" : true,
+	"indent" : 4,
+	"latedef" : true,
+	"newcap" : true,
+	"noarg" : true,
+	"noempty" : true,
+	"nonew" : true,
+	"plusplus" : true,
+	"quotmark" : "double",
 	"undef" : true,
 	"unused" : true,
 	"strict" : true,
+	"trailing" : true,
+	"browser" : true,
+	"devel" : true,
 	"globals" : {
-		"window" : false,
-		"console" : false,
-		"document" : false,
 		"app" : false,
 		"$" : false,
 		"_" : false,
@@ -14,11 +27,8 @@
 		"define" : false,
 		"ColorPicker" : false,
 		"html2canvas" : false,
-		"localStorage" : false,
 		"require" : false,
 		"impress" : false,
-		"setTimeout" : false,
-		"io" : false,
-		"FormData" : false
+		"io" : false
 	}
 }
