--- a/.jshintrc
+++ b/.jshintrc
@@ -2,9 +2,8 @@
 	"bitwise" : true,
 	"curly" : true,
 	"eqeqeq" : true,
-	"es3" : true,
+	"es3" : false,
 	"forin" : true,
-	"indent" : 4,
 	"latedef" : true,
 	"newcap" : true,
 	"noarg" : true,
@@ -16,6 +15,7 @@
 	"unused" : true,
 	"strict" : true,
 	"trailing" : true,
+	"onevar" : true,
 	"browser" : true,
 	"devel" : true,
 	"globals" : {
